--- a/content/notes/摸鱼办日志.md
+++ b/content/notes/摸鱼办日志.md
@@ -9,8 +9,15 @@ title: 记录零散的知识点
 
 1. git 默认是忽略大小写的，文件名(文件夹)字母大小改变了，Git 不会跟踪到，关闭忽略大小写的命令如下：
 
-```bash
 
-git config core.ignorecase false
+   ```bash
 
-```
+   git config core.ignorecase false
+
+   ```
+
+2. 正则匹配，忽略大小写: ` new RegExp()` 第二个参数设为 `ig`
+
+    ```
+    var regular = new RegExp(`.*\.${suffix}`,"ig");
+    ```
