--- a/content/notes/摸鱼办日志.md
+++ b/content/notes/摸鱼办日志.md
@@ -5,7 +5,7 @@ tags:
 title: 记录零散的知识点
 ---
 
-我的摸鱼办日志
+我的知识笔记本💻
 
 1. git 默认是忽略大小写的，文件名(文件夹)字母大小改变了，Git 不会跟踪到，关闭忽略大小写的命令如下：
 
@@ -14,10 +14,17 @@ title: 记录零散的知识点
 
    git config core.ignorecase false
 
-   ```
-
+   ``` 
 2. 正则匹配，忽略大小写: ` new RegExp()` 第二个参数设为 `ig`
 
     ```
     var regular = new RegExp(`.*\.${suffix}`,"ig");
+    ```
+3. git 撤销提交
+
+    ``` bash
+    // 回退到某个提交，并且把这个提交之前的更改放到暂存区，
+    git reset --soft commitId
+    // 回退到某个提交，并且把这个提交之前的更改全部删除
+    git reset --hard
     ```
