--- a/content/notes/摸鱼办日志.md
+++ b/content/notes/摸鱼办日志.md
@@ -28,3 +28,9 @@ title: 记录零散的知识点
     // 回退到某个提交，并且把这个提交之前的更改全部删除
     git reset --hard
     ```
+  4. 版本语义化控制
+
+      主版本 次要版本 修订版本
+      ```
+      
+      ```
